Fix path to template

--- a/cifutils/templates/cifutils/base.html
+++ b/cifutils/templates/cifutils/base.html
@@ -19,7 +19,7 @@
     <![endif]-->
 
     {% if not DEBUG %}
-        {% include "ganalytics.html" %}
+        {% include "cifutils/ganalytics.html" %}
     {% endif %}
 </head>
 <body>
